src/objects/QPMS__CAPAJunction__c.object
<CustomObject>
    <description>This is junction object between parent CAPA and child CAPA record.</description>
    <fields>
        <fullName>QPMS__Audit_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used in CAPA-AuditProgram reference</description>
        <label>Audit Program</label>
        <referenceTo>QPMS__Audit_Program__c</referenceTo>
        <relationshipLabel>CAPAJunctions</relationshipLabel>
        <relationshipName>CAPAJunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used In Reference between CAPA and Audit</description>
        <label>Audit</label>
        <referenceTo>QPMS__Audit__c</referenceTo>
        <relationshipLabel>CAPAJunctions</relationshipLabel>
        <relationshipName>CAPAJunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__CAPAChild__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAPAChild</label>
        <referenceTo>QPMS__CAPA__c</referenceTo>
        <relationshipLabel>CAPAJunctions (CAPAChild)</relationshipLabel>
        <relationshipName>CAPAJunctions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__CAPAChild_name__c</fullName>
        <formula>IF(NOT(ISBLANK(  QPMS__Audit__c )),  QPMS__Audit__r.Name , QPMS__CAPAChild__r.QPMS__CAPA_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAPAChild</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CAPAParent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAPA Name</label>
        <referenceTo>QPMS__CAPA__c</referenceTo>
        <relationshipLabel>CAPAJunctions</relationshipLabel>
        <relationshipName>CAPAJunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__CapaParentName__c</fullName>
        <formula>QPMS__CAPAParent__r.QPMS__CAPA_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CapaParentName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Observation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used In Reference between Capa and Observation</description>
        <label>Observation</label>
        <referenceTo>QPMS__Observation__c</referenceTo>
        <relationshipLabel>CAPAJunctions</relationshipLabel>
        <relationshipName>CAPAJunctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Sites_Impacted__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sites Impacted</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipLabel>CAPAJunctions</relationshipLabel>
        <relationshipName>CAPAs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CAPAJunction</label>
    <nameField>
        <displayFormat>CJ-{0000}</displayFormat>
        <label>CAPAJunction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CAPAJunctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>